z-index problems solved

--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -33,7 +33,7 @@
 
 
 
-.navMenuContainer {
+.navMenuContainer ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -42,14 +42,17 @@
     width: 380px;
     padding: 25px;
     z-index: 50000;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 500;
     /* border: 2px solid yellow; */
 }
 
-.navMenuContainer ul {
+/* .navMenuContainer ul {
     list-style-type: none;
     text-decoration: none;
     color: white;
-}
+} */
 
 .navMenuContainer li {
     text-decoration: none;
@@ -103,7 +106,7 @@
         height: 100vh;
 
         background-image: linear-gradient(#426BFF, #3E3BD7);
-        z-index: 10;
+        z-index: 100;
         transition: left 1s;
         /* border: 2px solid lime; */
     }
