--- a/frontend/src/components/single/single.css
+++ b/frontend/src/components/single/single.css
@@ -1,3 +1,7 @@
+.singleContainer {
+    z-index: -2;
+}
+
 .singleScoresBanner {
     background-color: #222;
     color: #fff;
@@ -82,12 +86,7 @@
     box-shadow: 0px 0px 30px 2px rgba(255, 255, 255, 0.7);
 }
 
-.guessContainer {
-    position: relative;
-    z-index: -5;
-}
-
-.guessContainer button {
+.primary-button {
     display: block;
     margin: auto;
     font-size: 1.8rem;
@@ -95,25 +94,30 @@
     width: 142px;
     height: 60px;
     text-align: center;
+    position: relative;
+    z-index: 0;
 }
 
 .singleCorrect {
     height: 75px;
     width: 75px;
     color: var(--correct);
-    position: absolute;
-    top: -2.5px;
+    position: relative;
+    top: -70px;
     left: calc(50% + 90px);
-    /* transform: translateX(-50%); */
+    background-image: linear-gradient(-15deg, #9493D0, #BDCCFF);
+    border-radius: 20px;
 }
 
 .singleIncorrect {
     height: 75px;
     width: 75px;
     color: var(--error);
-    position: absolute;
-    top: -2.5px;
+    position: relative;
+    top: -70px;
     left: calc(50% + 90px);
+    background-image: linear-gradient(-15deg, #9493D0, #BDCCFF);
+    border-radius: 20px;
 }
 
 .bottomButtons {
